--- a/css/main.css
+++ b/css/main.css
@@ -32,12 +32,12 @@ button, input, select, textarea {
   outline: none;
 }
 
-button {
+/*button {
   padding: 0.5em 1em;
   background: #2694f5;
   color: white;
   border: 0;
-}
+}*/
 
 input {
   padding: 0.5em;
@@ -274,6 +274,10 @@ input {
   -webkit-box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.75);
+  padding: 0.5em 1em;
+  background: #2694f5;
+  color: white;
+  border: 0;
 }
 
 .wait-message {
