--- a/css/main.css
+++ b/css/main.css
@@ -274,6 +274,9 @@ input {
   -webkit-box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 1px 5px 5px 0px rgba(0,0,0,0.75);
+  padding: 0.5em 1em;
+  color: white;
+  border: 0;
 }
 
 .wait-message {
